<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/CustomAlertDialog"
    android:layout_margin="@dimen/_10sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_reminder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/vivid_sky_blue"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/tvRemainder"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toBottomOf="@id/tvRemainder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/tvTitle"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"/>
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/etTitle"
        android:textSize="@dimen/_12sdp"
        android:hint="Enter Title"
       android:background="@drawable/rect_edit_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/tvSetDate"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/llSetDate"
        app:layout_constraintTop_toBottomOf="@id/tvSetDate"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/rect_edit_border"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSetDate"
            android:text="Set Date"
            android:textSize="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
           />
        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:src="@drawable/ic_calendar"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setTime"
        app:layout_constraintTop_toBottomOf="@id/llSetDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/tvSetTime"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/llSetTime"
        android:background="@drawable/rect_edit_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSetTime"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSetTime"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:text="Set Time"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_17sdp"
            android:src="@drawable/ic_alram_icon"
            />
    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SetReminderLang"
        app:layout_constraintTop_toBottomOf="@id/llSetTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/tvSetLang"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/llsetLang"
        android:background="@drawable/rect_edit_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSetLang"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp">

        <Spinner
            android:id="@+id/LangSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnDone"
        android:backgroundTint="@color/vivid_sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/done"
        app:cornerRadius="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llsetLang"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp" />
</androidx.constraintlayout.widget.ConstraintLayout>
